[gd_scene load_steps=25 format=2]

[ext_resource path="res://sprites/L3_forest/inhabitants/thisguygoblin/thisguy_d1-min.png" type="Texture" id=1]
[ext_resource path="res://sprites/L3_forest/inhabitants/thisguygoblin/thisguy_r0-min.png" type="Texture" id=2]
[ext_resource path="res://sprites/L3_forest/inhabitants/thisguygoblin/thisguy_d2-min.png" type="Texture" id=3]
[ext_resource path="res://sprites/L3_forest/inhabitants/thisguygoblin/thisguy_l0-min.png" type="Texture" id=4]
[ext_resource path="res://sprites/L3_forest/inhabitants/thisguygoblin/thisguy_d0-min.png" type="Texture" id=5]
[ext_resource path="res://sprites/L3_forest/inhabitants/thisguygoblin/thisguy_r1-min.png" type="Texture" id=6]
[ext_resource path="res://sprites/L3_forest/inhabitants/thisguygoblin/thisguy_l1-min.png" type="Texture" id=7]
[ext_resource path="res://sprites/L3_forest/inhabitants/thisguygoblin/thisguy_u0-min.png" type="Texture" id=8]
[ext_resource path="res://sprites/L3_forest/inhabitants/thisguygoblin/thisguy_u1-min.png" type="Texture" id=9]
[ext_resource path="res://sprites/L3_forest/inhabitants/thisguygoblin/thisguy_u2-min.png" type="Texture" id=10]
[ext_resource path="res://Characters/goblins/ThisGuyGoblin.gd" type="Script" id=11]
[ext_resource path="res://hitnhurtboxes/PlayerDetectionZone.tscn" type="PackedScene" id=12]
[ext_resource path="res://Brains/Stats.tscn" type="PackedScene" id=13]
[ext_resource path="res://hitnhurtboxes/hitbox.tscn" type="PackedScene" id=14]
[ext_resource path="res://hitnhurtboxes/hurtbox.tscn" type="PackedScene" id=15]
[ext_resource path="res://hitnhurtboxes/SoftCollision.tscn" type="PackedScene" id=16]
[ext_resource path="res://Brains/TalkToPerson.tscn" type="PackedScene" id=17]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 7 ) ],
"loop": true,
"name": "left",
"speed": 8.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 6 ) ],
"loop": true,
"name": "right",
"speed": 8.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 10 ) ],
"loop": true,
"name": "up",
"speed": 8.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 3 ) ],
"loop": true,
"name": "down",
"speed": 8.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 22.2874

[sub_resource type="CapsuleShape2D" id=5]
radius = 35.7868

[sub_resource type="CircleShape2D" id=6]
radius = 1039.65

[sub_resource type="CapsuleShape2D" id=7]
radius = 36.597

[sub_resource type="CircleShape2D" id=8]
radius = 63.7119

[sub_resource type="AnimationNodeStateMachinePlayback" id=4]

[node name="ThisGuyGoblin" type="KinematicBody2D"]
script = ExtResource( 11 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.707123, -67.1751 )
frames = SubResource( 1 )
animation = "right"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.33994, -2.16223 )
shape = SubResource( 2 )

[node name="HurtBox" parent="." instance=ExtResource( 15 )]
collision_layer = 16

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 2.34424, -30.5901 )
shape = SubResource( 5 )

[node name="Stats" parent="." instance=ExtResource( 13 )]
max_health = 2

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 12 )]
visible = false

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color( 1, 1, 1, 0.278431 )
position = Vector2( 0, -19.799 )
shape = SubResource( 6 )

[node name="HitBox" parent="." instance=ExtResource( 14 )]
position = Vector2( 0.707123, -67.1751 )
collision_mask = 8

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( 0.82697, 33.2713 )
shape = SubResource( 7 )

[node name="SoftCollision" parent="." instance=ExtResource( 16 )]
position = Vector2( 0, -5.65685 )

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2( 1.33736, -30.3743 )
shape = SubResource( 8 )

[node name="Person" parent="." instance=ExtResource( 17 )]
position = Vector2( 0.707123, -67.1751 )

[node name="AnimationTree" parent="Person" index="2"]
parameters/playback = SubResource( 4 )

[editable path="HurtBox"]
[editable path="PlayerDetectionZone"]
[editable path="HitBox"]
[editable path="SoftCollision"]
[editable path="Person"]
[editable path="Person/SeenBox"]
[editable path="Person/PlayerDetectionZone"]
